Changed the linux menu group to a standard category.
See the following links for details:
 - https://specifications.freedesktop.org/desktop-entry-spec/desktop-entry-spec-latest.html#recognized-keys
 - https://specifications.freedesktop.org/menu-spec/latest/apa.html

--- a/build.gradle
+++ b/build.gradle
@@ -166,7 +166,7 @@ runtime {
             println "Setting Linux installer options"
             imageOptions += ['--icon', 'package/linux/' + project.name + developerRelease + '.png']
             installerOptions += [
-                    '--linux-menu-group', vendor,
+                    '--linux-menu-group', 'Game',
                     '--linux-shortcut'
             ]
 
