--- a/package/archlinux/maptool/PKGBUILD
+++ b/package/archlinux/maptool/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc="Virtual Tabletop for playing roleplaying games."
 arch=(x86_64)
 url="https://github.com/RPTools/maptool"
 license=('AGPL3')
-source=("../../../releases/maptool-*.$arch.rpm")
+source=("../../../${RPM_FILENAME}")
 md5sums=(SKIP)
 
 package() {
