--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,12 @@ jobs:
         java: [ '14' ]
       fail-fast: false
     steps:
-      #       ____          _  __     __   ___        ____                __                     
-      #      / __ ) __  __ (_)/ /____/ /  ( _ )      / __ \ ____ _ _____ / /__ ____ _ ____ _ ___ 
+      #       ____          _  __     __   ___        ____                __
+      #      / __ ) __  __ (_)/ /____/ /  ( _ )      / __ \ ____ _ _____ / /__ ____ _ ____ _ ___
       #     / __  |/ / / // // // __  /  / __ \/|   / /_/ // __ `// ___// //_// __ `// __ `// _ \
       #    / /_/ // /_/ // // // /_/ /  / /_/  <   / ____// /_/ // /__ / ,<  / /_/ // /_/ //  __/
-      #   /_____/ \__,_//_//_/ \__,_/   \____/\/  /_/     \__,_/ \___//_/|_| \__,_/ \__, / \___/ 
-      #                                                                            /____/        
+      #   /_____/ \__,_//_//_/ \__,_/   \____/\/  /_/     \__,_/ \___//_/|_| \__,_/ \__, / \___/
+      #                                                                            /____/
     - name: Git checkout
       uses: actions/checkout@v2
     - name: Set up JDK
@@ -41,14 +41,13 @@ jobs:
           ${{ runner.os }}-gradle-
     - name: Build with Gradle
       run: ./gradlew jpackage
-    - name: Store the RPM filename for ArchLinux package build later
-      # This is put here to avoid problems if build.gradle ever changes
-      # in a way that affects the filename of the .rpm file.
+    - name: Copy the RPM to the location required to build the ArchLinux package
       if: matrix.os == 'ubuntu-latest'
       run: |
           RPM_FILENAME=$(echo releases/maptool-*.rpm)
           echo $RPM_FILENAME
           echo "::set-env name=RPM_FILENAME::$RPM_FILENAME"
+          cp releases/maptool-*.rpm package/archlinux/maptool/
     - name: Build ArchLinux package
       uses: 2m/arch-pkgbuild-builder@v1.16
       # This only even makes sense on Ubuntu.
@@ -67,7 +66,7 @@ jobs:
       #    _       __ _             __
       #   | |     / /(_)____   ____/ /____  _      __ _____
       #   | | /| / // // __ \ / __  // __ \| | /| / // ___/
-      #   | |/ |/ // // / / // /_/ // /_/ /| |/ |/ /(__  ) 
+      #   | |/ |/ // // / / // /_/ // /_/ /| |/ |/ /(__  )
       #   |__/|__//_//_/ /_/ \__,_/ \____/ |__/|__//____/
       #
     - name: Copy Windows Release Files
@@ -108,11 +107,11 @@ jobs:
         asset_path: releases/MapTool-${{ github.event.release.tag_name }}.jar
         asset_name: MapTool-${{ github.event.release.tag_name }}.jar
         asset_content_type: application/octet-stream
-      #       __     _                    
+      #       __     _
       #      / /    (_)____   __  __ _  __
       #     / /    / // __ \ / / / /| |/_/
-      #    / /___ / // / / // /_/ /_>  <  
-      #   /_____//_//_/ /_/ \__,_//_/|_|  
+      #    / /___ / // / / // /_/ /_>  <
+      #   /_____//_//_/ /_/ \__,_//_/|_|
       #
     - name: KLUDGE - Define the ARCHLINUX_PKGVER variable for later
       # WHY IS THERE NO WAY TO REPLACE STRINGS IN EXPRESSIONS?
@@ -164,9 +163,9 @@ jobs:
         asset_content_type: application/octet-stream
       #                               ____  _____
       #      ____ ___   ____ _ _____ / __ \/ ___/
-      #     / __ `__ \ / __ `// ___// / / /\__ \ 
-      #    / / / / / // /_/ // /__ / /_/ /___/ / 
-      #   /_/ /_/ /_/ \__,_/ \___/ \____//____/  
+      #     / __ `__ \ / __ `// ___// / / /\__ \
+      #    / / / / / // /_/ // /__ / /_/ /___/ /
+      #   /_/ /_/ /_/ \__,_/ \___/ \____//____/
       #
     - name: Copy Mac OS Release Files
       if: matrix.os == 'macOS-latest'
