--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -132,7 +132,7 @@ jobs:
       run: |
         cp releases/maptool*.x86_64.rpm releases/maptool-${{ github.event.release.tag_name }}-1.x86_64.rpm
         cp releases/maptool*_amd64.deb releases/maptool_${{ github.event.release.tag_name }}-1_amd64.deb
-        cp maptool-${ARCHLINUX_PKGVER}-1-x86_64.pkg.tar.xz releases/
+        cp maptool-${ARCHLINUX_PKGVER}-1-x86_64.pkg.tar.zst releases/
     - name: Upload Linux RPM Release Asset
       id: upload-release-asset-rpm
       uses: actions/upload-release-asset@v1
@@ -163,8 +163,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: releases/maptool-${ARCHLINUX_PKGVER}-1-x86_64.pkg.tar.xz
-        asset_name: maptool-${ARCHLINUX_PKGVER}-1-x86_64.pkg.tar.xz
+        asset_path: releases/maptool-${ARCHLINUX_PKGVER}-1-x86_64.pkg.tar.zst
+        asset_name: maptool-${ARCHLINUX_PKGVER}-1-x86_64.pkg.tar.zst
         asset_content_type: application/octet-stream
       #                               ____  _____
       #      ____ ___   ____ _ _____ / __ \/ ___/
