--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,9 +44,7 @@ jobs:
     - name: Copy the RPM to the location required to build the ArchLinux package
       if: matrix.os == 'ubuntu-latest'
       run: |
-          RPM_FILENAME=$(echo releases/maptool-*.rpm)
-          echo $RPM_FILENAME
-          echo "::set-env name=RPM_FILENAME::$RPM_FILENAME"
+          echo "::set-env name=RPM_FILENAME::$(echo releases/maptool-*.rpm)"
           cp releases/maptool-*.rpm package/archlinux/maptool/
     - name: Build ArchLinux package
       uses: 2m/arch-pkgbuild-builder@v1.16
@@ -123,10 +121,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       env:
           TAG_NAME: ${{ github.event.release.tag_name }}
-      run: |
-          ARCHLINUX_PKGVER=${TAG_NAME//-/_}
-          echo $ARCHLINUX_PKGVER
-          echo "::set-env name=ARCHLINUX_PKGVER::$ARCHLINUX_PKGVER"
+      run: echo "::set-env name=ARCHLINUX_PKGVER::${TAG_NAME//-/_}"
     - name: Copy Linux Release Files
       if: matrix.os == 'ubuntu-latest'
       run: |
