--- a/package/archlinux/maptool/PKGBUILD
+++ b/package/archlinux/maptool/PKGBUILD
@@ -8,18 +8,8 @@ url="https://github.com/RPTools/maptool"
 license=('AGPL3')
 source=("${RPM_FILENAME}")
 md5sums=(SKIP)
+install=maptool
 
 package() {
     cp -r opt/ "$pkgdir/"
-}
-
-post_install() {
-    xdg-desktop-menu install /opt/maptool/lib/maptool-MapTool.desktop
-    xdg-mime install /opt/maptool/lib/maptool-MapTool-MimeInfo.xml
-}
-
-pre_remove() {
-    xdg-desktop-menu uninstall /opt/maptool/lib/maptool-MapTool.desktop
-    xdg-mime uninstall /opt/maptool/lib/maptool-MapTool-MimeInfo.xml
-    uninstall_default_mime_handler maptool-MapTool.desktop application/zip
 }
