Maybe I should trust man pages more than wiki pages, even if both are Official™.

--- a/package/archlinux/maptool/PKGBUILD
+++ b/package/archlinux/maptool/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/RPTools/maptool"
 license=('AGPL3')
 source=("${RPM_FILENAME}")
 md5sums=(SKIP)
-install=maptool
+install=maptool.install
 
 package() {
     cp -r opt/ "$pkgdir/"
