--- a/build.gradle
+++ b/build.gradle
@@ -164,7 +164,8 @@ runtime {
 
         if (osdetector.os.is('linux')) {
             println "Setting Linux installer options"
-            imageOptions += ['--icon', 'package/linux/' + project.name + developerRelease + '.png']
+            resourceDir = file('package/linux')
+            imageOptions += ['--icon', project.name + developerRelease + '.png']
             installerOptions += [
                     '--linux-menu-group', 'Game',
                     '--linux-shortcut'
